# ai-conversational-agent

./: .env.example  .gitignore  Dockerfile  SOP.md  agent.py  backend_server.py  calendar_tools.py  create_trunk.py  db.py  list_models.py  notify.py  pyproject.toml  supabase_migration_v3.sql  supabase_migration_v4.sql  supabase_migration_v5.sql  supervisord.conf  test_genai.py  test_latency.py  test_multi_region_latency.py  test_native_latency.py  test_vertex_api_key.py  test_vertex_latency.py  ui_server.py
agents/doctor/: agent.py  config.json
agents/eximple/: agent.py  config.json
agents/real_estate/: agent.py  config.json
agents/real_estate_ny/: agent.py  config.json
client/: middleware.ts  package.json  pnpm-lock.yaml  vercel.json
client/app/: globals.css  layout.tsx  page.tsx
client/app/admin/: admin.css  page.tsx
client/app/api/admin/calls/: route.ts
client/app/api/admin/stats/: route.ts
client/app/api/auth/: route.ts
client/app/api/keepalive/: route.ts
client/app/chat/: chat.css  page.tsx
