[project]
name = "inbound-ai-voice"
version = "1.0.0"
description = "LiveKit AI Voice Agent with FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    # ── LiveKit ──
    "livekit>=1.1.8",
    "livekit-agents>=1.5.14",
    "livekit-api>=1.1.0",
    "livekit-blingfire>=1.1.0",
    "livekit-plugins-cartesia>=1.5.14",
    "livekit-plugins-deepgram>=1.5.14",
    "livekit-plugins-elevenlabs>=1.5.14",
    "livekit-plugins-noise-cancellation>=0.2.5",
    "livekit-plugins-openai>=1.5.14",
    "livekit-plugins-sarvam>=1.5.14",
    "livekit-plugins-silero>=1.5.14",
    "livekit-protocol>=1.1.2",
    # ── LLM / AI ──
    "openai>=2.21.0",
    "anthropic>=0.84.0",
    "tiktoken>=0.12.0",
    # ── STT/TTS ──
    "sarvamai>=0.1.25",
    # ── Web / HTTP ──
    "fastapi>=0.129.2",
    "uvicorn>=0.41.0",
    "httpx>=0.28.1",
    "requests>=2.32.5",
    "starlette>=0.52.1",
    # ── Database (Supabase) ──
    "supabase>=2.28.0",
    "postgrest>=2.28.0",
    # ── Observability ──
    "sentry-sdk>=2.53.0",
    "prometheus_client>=0.24.1",
    "opentelemetry-api>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "opentelemetry-exporter-otlp>=1.39.1",
    # ── Google Calendar ──
    "google-api-python-client>=2.190.0",
    "google-auth>=2.48.0",
    "google-auth-httplib2>=0.3.0",
    # ── Core utilities ──
    "python-dotenv>=1.2.1",
    "certifi>=2026.1.4",
    "pytz>=2025.2",
    "pydantic>=2.12.5",
    "aiohttp>=3.13.3",
    "aiofiles>=25.1.0",
    "nest-asyncio>=1.6.0",
    "numpy>=2.4.2",
    "onnxruntime>=1.24.1",
    "pillow>=12.1.1",
    "regex>=2026.2.19",
    "rich>=14.3.2",
    "watchfiles>=1.1.1",
    "livekit-plugins-google>=1.5.14",
]
